--- a/packages/kafka-connector/package.json
+++ b/packages/kafka-connector/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kafka-connector",
   "private": true,
-  "description": "PagoPA interop tracing Kafka connector",
+  "description": "PagoPA interop probing Kafka connector",
   "version": "1.0.0",
   "type": "module",
   "main": "dist",
