--- a/packages/probing-scheduler/package.json
+++ b/packages/probing-scheduler/package.json
@@ -18,17 +18,18 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
+    "@types/uuid": "9.0.7",
     "@types/dotenv-flow": "3.3.3",
     "@types/node": "20.10.4",
-    "ts-node": "10.9.2",
-    "typescript": "5.2.2",
-    "vitest": "0.33.0",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
-    "prettier": "3.2.5"
+    "prettier": "3.2.5",
+    "ts-node": "10.9.2",
+    "typescript": "5.2.2",
+    "vitest": "0.33.0"
   },
   "dependencies": {
     "@tsconfig/node-lts": "20.1.1",
@@ -38,9 +39,10 @@
     "dotenv-flow": "3.3.0",
     "node-cron": "3.0.3",
     "pagopa-interop-probing-commons": "workspace:*",
-    "pagopa-interop-probing-models": "workspace:*",
     "pagopa-interop-probing-eservice-operations-client": "workspace:*",
+    "pagopa-interop-probing-models": "workspace:*",
     "ts-pattern": "5.0.6",
+    "uuid": "10.0.0",
     "zod": "3.22.4"
   }
 }
