--- a/packages/probing-response-updater/package.json
+++ b/packages/probing-response-updater/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/parser": "6.21.0",
     "@types/dotenv-flow": "3.3.3",
     "@types/node": "20.10.4",
+    "@types/uuid": "9.0.7",
     "ts-node": "10.9.2",
     "typescript": "5.2.2",
     "vitest": "0.33.0",
@@ -39,6 +40,7 @@
     "pagopa-interop-probing-models": "workspace:*",
     "pagopa-interop-probing-eservice-operations-client": "workspace:*",
     "ts-pattern": "5.0.6",
-    "zod": "3.22.4"
+    "zod": "3.22.4",
+    "uuid": "10.0.0"
   }
 }
