--- a/packages/clients/eservice-operations/package.json
+++ b/packages/clients/eservice-operations/package.json
@@ -22,13 +22,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "8.21.0",
-    "@typescript-eslint/parser": "8.21.0",
-    "eslint": "9.19.0",
-    "eslint-config-prettier": "10.0.1",
-    "eslint-plugin-prettier": "5.2.3",
-    "globals": "15.14.0",
-    "prettier": "3.2.5",
+    "@probing/eslint-config": "workspace:*",
     "ts-node": "10.9.2",
     "typescript": "5.2.2"
   },
