--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -32,15 +32,9 @@
     "zod-validation-error": "3.3.0"
   },
   "devDependencies": {
+    "@probing/eslint-config": "workspace:*",
     "@types/express": "4.17.21",
     "@types/node": "20.10.4",
-    "@typescript-eslint/eslint-plugin": "8.21.0",
-    "@typescript-eslint/parser": "8.21.0",
-    "eslint": "9.19.0",
-    "eslint-config-prettier": "10.0.1",
-    "eslint-plugin-prettier": "5.2.3",
-    "globals": "15.14.0",
-    "prettier": "3.2.5",
     "typescript": "5.2.2"
   }
 }
