--- a/packages/kafka-producer/package.json
+++ b/packages/kafka-producer/package.json
@@ -23,18 +23,12 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@probing/eslint-config": "workspace:*",
     "@pagopa/interop-outbound-models": "1.7.1",
     "@types/dotenv-flow": "3.3.3",
     "@types/express": "4.17.17",
     "@types/node": "20.10.4",
     "@types/uuid": "9.0.8",
-    "@typescript-eslint/eslint-plugin": "8.21.0",
-    "@typescript-eslint/parser": "8.21.0",
-    "eslint": "9.19.0",
-    "eslint-config-prettier": "10.0.1",
-    "eslint-plugin-prettier": "5.2.3",
-    "globals": "15.14.0",
-    "prettier": "3.2.5",
     "ts-node": "10.9.2",
     "typescript": "5.2.2",
     "tsx": "4.20.5"
