--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -24,13 +24,7 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "8.21.0",
-    "@typescript-eslint/parser": "8.21.0",
-    "eslint": "9.19.0",
-    "eslint-config-prettier": "10.0.1",
-    "eslint-plugin-prettier": "5.2.3",
-    "globals": "15.14.0",
-    "prettier": "3.2.5",
+    "@probing/eslint-config": "workspace:*",
     "tsc-esm-fix": "2.20.21",
     "typescript": "5.2.2"
   }
