--- a/packages/probing-eservice-operations/package.json
+++ b/packages/probing-eservice-operations/package.json
@@ -20,21 +20,15 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@probing/eslint-config": "workspace:*",
     "@probing/vitest-config": "workspace:*",
     "@types/dotenv-flow": "3.3.3",
     "@types/express": "4.17.21",
     "@types/node": "20.10.4",
     "@types/pg": "8.15.6",
     "@types/uuid": "9.0.8",
-    "@typescript-eslint/eslint-plugin": "8.21.0",
-    "@typescript-eslint/parser": "8.21.0",
     "@types/supertest": "6.0.2",
     "drizzle-kit": "0.31.6",
-    "eslint": "9.19.0",
-    "eslint-config-prettier": "10.0.1",
-    "eslint-plugin-prettier": "5.2.3",
-    "globals": "15.14.0",
-    "prettier": "3.2.5",
     "supertest": "7.1.4",
     "testcontainers": "10.6.0",
     "ts-node": "10.9.2",
