--- a/packages/probing-frontend/package.json
+++ b/packages/probing-frontend/package.json
@@ -35,19 +35,12 @@
     "zustand": "4.5.2"
   },
   "devDependencies": {
+    "@probing/eslint-config": "workspace:*",
+    "@probing/vitest-config": "workspace:*",
     "@types/react": "18.2.64",
     "@types/react-dom": "18.2.21",
-    "@typescript-eslint/eslint-plugin": "8.21.0",
-    "@typescript-eslint/parser": "8.21.0",
     "@vitejs/plugin-react": "4.2.1",
     "@types/d3": "latest",
-    "eslint": "9.19.0",
-    "eslint-config-prettier": "10.0.1",
-    "eslint-plugin-prettier": "5.2.3",
-    "eslint-plugin-react": "7.37.4",
-    "eslint-plugin-react-hooks": "5.1.0",
-    "eslint-plugin-react-refresh": "0.4.18",
-    "prettier": "3.2.5",
     "typescript": "5.2.2",
     "tsx": "4.20.5",
     "vite": "5.4.21"
