--- a/packages/probing-statistics-api/package.json
+++ b/packages/probing-statistics-api/package.json
@@ -20,19 +20,13 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@probing/eslint-config": "workspace:*",
     "@probing/vitest-config": "workspace:*",
     "@types/cors": "2.8.17",
     "@types/dotenv-flow": "3.3.3",
     "@types/express": "4.17.21",
     "@types/node": "20.10.4",
     "@types/supertest": "6.0.2",
-    "@typescript-eslint/eslint-plugin": "8.21.0",
-    "@typescript-eslint/parser": "8.21.0",
-    "eslint": "9.19.0",
-    "eslint-config-prettier": "10.0.1",
-    "eslint-plugin-prettier": "5.2.3",
-    "globals": "15.14.0",
-    "prettier": "3.2.5",
     "supertest": "6.3.4",
     "ts-node": "10.9.2",
     "typescript": "5.2.2",
