--- a/packages/tenant-event-consumer/package.json
+++ b/packages/tenant-event-consumer/package.json
@@ -33,17 +33,11 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@probing/eslint-config": "workspace:*",
     "@probing/vitest-config": "workspace:*",
     "@types/dotenv-flow": "3.3.3",
     "@types/node": "20.10.4",
     "@types/uuid": "9.0.8",
-    "@typescript-eslint/eslint-plugin": "8.21.0",
-    "@typescript-eslint/parser": "8.21.0",
-    "eslint": "9.19.0",
-    "eslint-config-prettier": "10.0.1",
-    "eslint-plugin-prettier": "5.2.3",
-    "globals": "15.14.0",
-    "prettier": "3.2.5",
     "ts-node": "10.9.2",
     "typescript": "5.2.2",
     "tsx": "4.20.5"
